# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../companion_device_auth.gni")

config("companion_device_auth_public_config") {
  include_dirs = [ "inc" ]
}

ohos_shared_library("companiondeviceauth") {
  sanitize = companion_device_auth_sanitize
  branch_protector_ret = "pac_ret"
  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  include_dirs = [
    "inc",
    "${companion_device_auth_path}/common/inc",
    "${companion_device_auth_path}/frameworks/native/client/inc",
  ]

  sources = [
    "src/companion_device_auth_entry.cpp",
    "src/companion_device_auth_napi_helper.cpp",
    "src/companion_device_auth_napi_impl.cpp",
    "src/napi_available_device_status_callback.cpp",
    "src/napi_continuous_auth_status_callback.cpp",
    "src/napi_device_select_callback.cpp",
    "src/napi_template_status_callback.cpp",
    "src/status_monitor.cpp",
  ]

  deps = [ "${companion_device_auth_path}/frameworks/native/client:companion_device_auth_client" ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "ability_runtime:napi_base_context",
    "ability_runtime:ui_extension",
    "ace_engine:ace_uicontent",
    "c_utils:utils",
    "hiappevent:hiappevent_innerapi",
    "hilog:libhilog",
    "ipc:ipc_single",
    "jsoncpp:jsoncpp",
    "napi:ace_napi",
    "samgr:samgr_proxy",
  ]

  configs = [
    "${companion_device_auth_path}/common:companion_device_auth_common_config",
  ]

  public_configs = [ ":companion_device_auth_public_config" ]

  relative_install_dir = "module/useriam"

  # if (use_musl) {
  #   version_script = "companion_device_auth_napi_map"
  # }

  subsystem_name = companion_device_auth_subsystem_name
  part_name = companion_device_auth_part_name
}
