# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../companion_device_auth.gni")

ohos_shared_library("companion_device_auth_client") {
  sanitize = companion_device_auth_sanitize
  branch_protector_ret = "pac_ret"
  include_dirs = [
    "inc",
    "${companion_device_auth_path}/common/inc",
  ]

  sources = [
    "src/companion_device_auth_client_impl.cpp",
    "src/ipc_available_device_status_callback_service.cpp",
    "src/ipc_client_utils.cpp",
    "src/ipc_continuous_auth_status_callback_service.cpp",
    "src/ipc_device_select_callback_service.cpp",
    "src/ipc_template_status_callback_service.cpp",
    "src/set_device_select_result_callback.cpp",
    "src/system_ability_listener.cpp",
  ]

  configs = [
    "${companion_device_auth_path}/common:companion_device_auth_common_config",
  ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  public_configs = [ "${companion_device_auth_path}/frameworks/native/ipc:companion_device_auth_native_ipc_config" ]

  innerapi_tags = [ "platformsdk" ]

  deps = [ "${companion_device_auth_path}/frameworks/native/ipc:companion_device_auth_proxy" ]

  # if (use_musl) {
  #   version_script = "companion_device_auth_client_map"
  # }

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "hilog:libhilog",
    "init:libbeget_proxy",
    "init:libbegetutil",
    "ipc:ipc_single",
    "napi:ace_napi",
    "samgr:samgr_proxy",
  ]

  subsystem_name = companion_device_auth_subsystem_name
  part_name = companion_device_auth_part_name
}
