# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../companion_device_auth.gni")
import("BUILD.gni")

# Export config for tests to use
config("client_config") {
  include_dirs = companion_device_auth_client_include_dirs
  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]
}

ohos_shared_library("companion_device_auth_client") {
  sanitize = companion_device_auth_sanitize
  branch_protector_ret = "pac_ret"
  include_dirs = companion_device_auth_client_include_dirs

  sources = companion_device_auth_client_sources

  configs = [
    "${companion_device_auth_path}/common:companion_device_auth_common_config",
  ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  public_configs = [
    "${companion_device_auth_path}/frameworks/native/ipc:companion_device_auth_native_ipc_config",
    ":client_config",
  ]

  innerapi_tags = [ "platformsdk" ]

  deps = companion_device_auth_client_deps

  # if (use_musl) {
  #   version_script = "companion_device_auth_client_map"
  # }

  external_deps = companion_device_auth_client_external_deps

  subsystem_name = companion_device_auth_subsystem_name
  part_name = companion_device_auth_part_name
}
