# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../companion_device_auth.gni")

companion_device_auth_client_sources = [
  "src/companion_device_auth_client_impl.cpp",
  "src/ipc_available_device_status_callback_service.cpp",
  "src/ipc_client_fetcher.cpp",
  "src/ipc_continuous_auth_status_callback_service.cpp",
  "src/ipc_device_select_callback_service.cpp",
  "src/ipc_template_status_callback_service.cpp",
  "src/set_device_select_result_callback.cpp",
  "src/system_ability_listener.cpp",
]

companion_device_auth_client_full_sources = []
foreach(src, companion_device_auth_client_sources) {
  companion_device_auth_client_full_sources +=
      [ "${companion_device_auth_path}/frameworks/native/client/" + src ]
}

companion_device_auth_client_include_dirs = [ "inc" ]

companion_device_auth_client_external_deps = [
  "access_token:libaccesstoken_sdk",
  "c_utils:utils",
  "hilog:libhilog",
  "init:libbeget_proxy",
  "init:libbegetutil",
  "ipc:ipc_single",
  "napi:ace_napi",
  "samgr:samgr_proxy",
]

companion_device_auth_client_deps = [
  "${companion_device_auth_path}/common:companion_device_auth_common",
  "${companion_device_auth_path}/frameworks/native/ipc:companion_device_auth_proxy",
]
